<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="326dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/red"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/warning_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:contentDescription="@string/end_quiz"
            android:src="@drawable/ic_info_outline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/margin_medium"
            android:paddingBottom="3dp"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:paddingTop="@dimen/margin_medium"
            android:text="@string/warning_message"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_data" />

        <View
            android:layout_width="123dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_medium"
            android:text="@string/message_confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_data" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDlConfirmOK"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_title" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <Button
                android:id="@+id/btnDlConfirmCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_title" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>