<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="328dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/greenLight"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:contentDescription="@string/end_quiz"
            android:src="@drawable/ic_exit_app" />

        <TextView
            android:id="@+id/tvDlNotifyMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/line_spacing_extra"
            android:text="Vẫn còn 30/40 câu hỏi chưa trả lời.\nBạn có muốn thoát?"
            android:textColor="@color/red"
            android:textSize="@dimen/text_size_data" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@color/greenDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDlNotifyEnd"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/end_quiz"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title" />

            <View
                android:background="@color/greenDark"
                android:layout_width="2dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btnDlNotifyReturn"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_title"
                android:textAllCaps="false"
                android:text="@string/btn_return"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>