<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="328dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="36dp"
    android:layout_marginTop="36dp"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dlListQ_Title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        tools:text="Phiếu trả lời trắc nghiệm" />

    <LinearLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dlListQ_Title"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_medium"
        android:paddingRight="@dimen/margin_medium"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/correct"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_data" />

                <TextView
                    android:id="@+id/resultTrue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginRight="33dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_title"
                    tools:text="30" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/incorrect"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_data" />

                <TextView
                    android:id="@+id/resultFalse"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginRight="33dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_title"
                    tools:text="9" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/margin_medium">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/un_choice"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_data" />

                <TextView
                    android:id="@+id/resultUnChoice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="33dp"
                    android:layout_marginRight="33dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_title"
                    tools:text="1" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/red" />

        <TextView
            android:id="@+id/resultScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="38sp"
            android:textStyle="bold"
            tools:text="7.5" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layoutResult"
        android:background="@color/red" />

    <GridView
        android:id="@+id/dlListQ_GridItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/dialogBottom"
        android:layout_below="@id/layoutResult"
        android:numColumns="2"
        android:padding="@dimen/margin_medium" />

    <LinearLayout
        android:id="@+id/dialogBottom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDlListQ_EndQuiz"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/end_quiz"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />

        <Button
            android:id="@+id/btnDlListQ_Return"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_return"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />
    </LinearLayout>
</RelativeLayout>